fixes-codeblock-spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -25,6 +25,7 @@ code {
 }
 .highlight {
   background-color: $kv-color--black-150 !important;
+  margin-bottom: 1rem;
 }
 code {
   padding: 1px 5px;
